public/global.css
:root {
	--shadow-color-h: 0deg;
	--shadow-color-s: 0%;
	--shadow-color-l: 0%;
	--shadow-color: hsla(
		var(--shadow-color-h),
		var(--shadow-color-s),
		var(--shadow-color-l),
		0.7
	);
}
html, body {
	position: relative;
	width: 100%;
	height: 100%;
}

body {
	color: #333;
	margin: 0;
	padding: 8px;
	box-sizing: border-box;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
	overflow: hidden;
}

a {
	color: rgb(0,100,200);
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

a:visited {
	color: rgb(0,80,160);
}

label {
	display: block;
}

input, button, select, textarea {
	font-family: inherit;
	font-size: inherit;
	-webkit-padding: 0.4em 0;
	padding: 0.4em;
	margin: 0 0 0.5em 0;
	box-sizing: border-box;
	border: 1px solid #ccc;
	border-radius: 2px;
}

input:disabled {
	color: #ccc;
}

button {
	color: #333;
	background-color: #f4f4f4;
	outline: none;
}

button:disabled {
	color: #999;
}

button:not(:disabled):active {
	background-color: #ddd;
}

button:focus {
	border-color: #666;
}


/**
* Toasts
*/
ul.toasts {
	bottom: 5%;
	top: unset;
}
ul.toasts .toast {
	border-radius: 4px;
	margin: 1vh 0.8vw !important;
}
ul.toasts .toast .content {
	color: black;
	font-size: 1.3rem;
}

/**
* Fancy buttons
*/
.fancyBtn {
	transition: all 0.2s linear;
	box-shadow: 0 0 0px 1px var(--shadow-color);
}
.fancyBtn:hover {
	box-shadow: 0 0 4px 2px var(--shadow-color);
	transform: scale(1.04);
}

/**
* Utility classes
*/
.center {
	text-align: center;
	justify-content: center;
}
.vCenter {
	align-items: center;
}
.fullAbsolute {
	width: 100%;
	height: 100%;
	position: absolute;
	top: 0;
	left: 0;
}
.unselectable {
	-moz-user-select: none;
	-webkit-user-select: none;
	-ms-user-select: none;
	user-select: none;
}
.draggable {
	cursor: move;
}

/**
* Responsive Design
*/
.flex {
	display: flex;
}
.row {
	display: flex;
	flex-wrap: wrap;
	width: 100%;
}
/** Break Points */
/** xs (< 600px) */
.xs6 {
	width: calc(100% / (6/6))
}
.xs5 {
	width: calc(100% / (6/5))
}
.xs4 {
	width: calc(100% / (6/4))
}
.xs3 {
	width: calc(100% / (6/3))
}
.xs2 {
	width: calc(100% / (6/2))
}
.xs1 {
	width: calc(100% / (6/1))
}
/** sm **/
@media (min-width: 600px) {
	.sm6 {
		width: calc(100% / (6/6))
	}
	.sm5 {
		width: calc(100% / (6/5))
	}
	.sm4 {
		width: calc(100% / (6/4))
	}
	.sm3 {
		width: calc(100% / (6/3))
	}
	.sm2 {
		width: calc(100% / (6/2))
	}
	.sm1 {
		width: calc(100% / (6/1))
	}
}
/** md **/
@media (min-width: 960px) {
	.md6 {
		width: calc(100% / (6/6))
	}
	.md5 {
		width: calc(100% / (6/5))
	}
	.md4 {
		width: calc(100% / (6/4))
	}
	.md3 {
		width: calc(100% / (6/3))
	}
	.md2 {
		width: calc(100% / (6/2))
	}
	.md1 {
		width: calc(100% / (6/1))
	}
}
/** lg **/
@media (min-width: 1280px) {
	.lg6 {
		width: calc(100% / (6/6))
	}
	.lg5 {
		width: calc(100% / (6/5))
	}
	.lg4 {
		width: calc(100% / (6/4))
	}
	.lg3 {
		width: calc(100% / (6/3))
	}
	.lg2 {
		width: calc(100% / (6/2))
	}
	.lg1 {
		width: calc(100% / (6/1))
	}
}
/** xl **/
@media (min-width: 1920px) {
	.xl6 {
		width: calc(100% / (6/6))
	}
	.xl5 {
		width: calc(100% / (6/5))
	}
	.xl4 {
		width: calc(100% / (6/4))
	}
	.xl3 {
		width: calc(100% / (6/3))
	}
	.xl2 {
		width: calc(100% / (6/2))
	}
	.xl1 {
		width: calc(100% / (6/1))
	}
}

